--- a/src/Tarea1_ML2_LunaMarisol_RosalesNoel.ipynb
+++ b/src/Tarea1_ML2_LunaMarisol_RosalesNoel.ipynb
@@ -27,8 +27,8 @@
       "cell_type": "markdown",
       "source": [
         "INTEGRANTES:\n",
-        "1.   \n",
-        "2.     "
+        "1.   Luna Carrera Marisol\n",
+        "2.   Rosales Chuco Noel  "
       ],
       "metadata": {
         "id": "uwWCBGbPf3Cd"
